行内代码搞的明显一点

--- a/assets/scss/layout/_single.scss
+++ b/assets/scss/layout/_single.scss
@@ -204,7 +204,7 @@ dd {
 
 code {
     padding: ($fontSize / 8) ($fontSize / 4);
-    background-color: var(--color-contrast-lower);
+    background-color: pink;
     font-size: 80%;
 }
 pre {
