标题中的英文大写

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -50,6 +50,7 @@ svg {
 h1, h2, h3, h4, h5, h6 {
     margin: 1.618em 0 1em;
     color: var(--color-contrast-higher);
+    text-transform: uppercase;
     a {
         text-decoration: none !important;
         color: var(--color-contrast-higher);
