--- a/assets/scss/layout/_list.scss
+++ b/assets/scss/layout/_list.scss
@@ -68,6 +68,7 @@
     margin: 0 0.618em 0 2em;
     font-size: 1.2em;
     line-height: 1.5;
+    text-transform: uppercase;
 }
 .list-item-time {
     margin: 0 0.618em 0 2em;
