行内代码的样式的黑白2种

--- a/assets/scss/themes/_light.scss
+++ b/assets/scss/themes/_light.scss
@@ -3,6 +3,7 @@
 :root {
     @include defineColorHSL(--color-primary, $primaryColorLightH, $primaryColorLightS, $primaryColorLightL);
     @include defineColorHSL(--color-bg, 0, 0%, 100%);
+    --color-code-bg:pink;
     @include defineColorHSL(--color-contrast-lower, 0, 0%, 95%);
     @include defineColorHSL(--color-contrast-low, 240, 1%, 83%);
     @include defineColorHSL(--color-contrast-medium, 240, 1%, 48%);
