--- a/assets/scss/layout/_list.scss
+++ b/assets/scss/layout/_list.scss
@@ -4,6 +4,18 @@
 
 .list-title {
     text-align: center;
+    &>span{
+        position: relative;
+    }
+    &-count{
+        position: absolute;
+        right: -100px;
+        top: 0;
+        width: 100px;
+        text-align: left;
+        font-size: 12px;
+        color: rgb(219, 37, 37);
+    }
 }
 
 .list {
@@ -80,6 +92,18 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    &>span{
+        position: relative;
+    }
+    &-count{
+        position: absolute;
+        right: -100px;
+        top: 0;
+        width: 100px;
+        text-align: left;
+        font-size: 12px;
+        color: rgb(219, 37, 37);
+    }
 }
 
 .term-count {
