--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -17,7 +17,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: var(--main-inner);
+        width: $listWidth;
+        // width: var(--main-inner);
         margin: 0 auto;
     }
     .site-brand {
