--- a/assets/scss/pages/_home-footage.scss
+++ b/assets/scss/pages/_home-footage.scss
@@ -30,12 +30,20 @@
         display: flex;
         font-size: 3em;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-between;
+        &-text{
+            position: absolute;
+            left: 100%;
+            top: 0;
+            text-align: left;
+            font-size: 14px;
+            -webkit-text-stroke-color: rgb(219, 37, 37);
+            color: rgb(219, 37, 37);
+        }
     }
     .content {
         text-align: center;
-        width: auto;
-        max-width: 50em;
+        width: $listWidth;
         margin: 0 auto;
         color: #fff;
         margin-top: -5em;
@@ -86,6 +94,13 @@
         color: #aaa;
         transition: color 0.5s;
         text-decoration: none;
+        -webkit-text-stroke: 1px rgb(63, 161, 253);
+        -webkit-text-fill-color: transparent;
+        font-family: sans-serif;
+        font-weight: bolder;
+        line-height: 1;
+        position: relative;
+
         &:hover {
             color: #fff;
         }
