恢复原来的代码

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -17,8 +17,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: $listWidth;
-        // width: var(--main-inner);
+        width: var(--main-inner);
         margin: 0 auto;
     }
     .site-brand {
