--- a/assets/scss/layout/_single.scss
+++ b/assets/scss/layout/_single.scss
@@ -147,6 +147,7 @@ ol, ul {
 .footnotes {
     font-size: 90%;
     margin-top: 5rem;
+    word-break: break-all;
     hr {
         margin: 0;
         height: 1px;
@@ -234,7 +235,7 @@ dd {
 
 code {
     padding: ($fontSize / 8) ($fontSize / 4);
-    background-color:var(--color-code-bg);
+    background-color: var(--color-contrast-lower);
     font-size: 80%;
     position: relative;
     top: -1px;
