--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     width: 100%;
     height: 100%;
@@ -12,7 +13,7 @@ body {
     overflow-wrap: break-word;
     word-wrap: break-word;
     line-height: 1.618;
-    transition: all $duration;
+    // transition: all $duration;
 }
 
 .container {
@@ -29,7 +30,7 @@ body {
 
 @if ($headerLayoutFlex) {
     .main {
-        padding-top: 7em;
+        padding-top: 0em;
     }
 }
 
@@ -44,12 +45,18 @@ body {
     fill: currentColor;
     display: inline-block;
 }
+
 svg {
     vertical-align: middle;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 1.618em 0 1em;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 1.5em 0 0.5em;
     color: var(--color-contrast-higher);
 
     a {
@@ -57,21 +64,27 @@ h1, h2, h3, h4, h5, h6 {
         color: var(--color-contrast-higher);
     }
 }
+
 h1 {
     font-size: 2em;
 }
+
 h2 {
     font-size: 1.8em;
 }
+
 h3 {
     font-size: 1.6em;
 }
+
 h4 {
     font-size: 1.4em;
 }
+
 h5 {
     font-size: 1.2em;
 }
+
 h6 {
     font-size: 1em;
 }
@@ -80,6 +93,7 @@ a {
     color: var(--color-contrast-high);
     text-decoration: none;
     transition: all $duration;
+
     &:hover {
         color: var(--color-primary);
     }
@@ -93,18 +107,23 @@ a {
     width: 0.4rem;
     height: 0.4rem;
 }
+
 ::-webkit-scrollbar-track {
     background-color: var(--color-bg);
 }
+
 ::-webkit-scrollbar-thumb {
     background-color: var(--color-contrast-low);
+
     &:hover {
         background-color: alpha(var(--color-primary), 0.5);
     }
+
     &:active {
         background-color: alpha(var(--color-primary), 0.75);
     }
 }
+
 ::-webkit-scrollbar-corner {
     background-color: var(--color-bg);
 }
