--- a/assets/scss/base/_responsive.scss
+++ b/assets/scss/base/_responsive.scss
@@ -2,65 +2,81 @@
     .main-inner {
         width: auto !important;
     }
+
     .anchor-link {
         position: relative;
         transform: none;
         float: right;
     }
+
     #back-to-top {
         display: none;
     }
-    .home{
-        .content{
+
+    .home {
+        .content {
             width: 90% !important;
         }
-        .section-list{
+
+        .section-list {
             // flex-direction: column;
             justify-content: center;
             font-size: 10vw;
-            &>a{
+
+            &>a {
                 margin: 1vh 4vw;
             }
-            &:nth-child(2){
+
+            &:nth-child(2) {
                 padding: 0em;
             }
         }
     }
+
     @if ($headerLayoutFlex) {
         .header-inner {
             width: 100%;
         }
+
         .site-brand {
             margin-left: 1em;
         }
+
         @if ($enableNavToggle) {
             .header-inner {
                 display: block;
                 margin: 0;
             }
+
             .nav-toggle {
                 display: block;
             }
+
             .nav {
                 display: none;
                 text-align: center;
                 margin: 2em 0;
             }
+
             .menu {
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 align-items: center;
             }
+
             .menu-item {
                 margin: 0;
                 padding: 1em;
+
                 .icon {
                     margin: 0;
                 }
             }
+
             .menu-item-name {
                 display: block;
             }
+
             .header.open {
                 .nav {
                     display: block;
@@ -68,6 +84,7 @@
                     animation-iteration-count: 1;
                     animation-fill-mode: forwards;
                 }
+
                 @keyframes appear {
                     0% {
                         opacity: 0;
@@ -76,6 +93,7 @@
                         transform: scaleY(0);
                         transform-origin: top;
                     }
+
                     100% {
                         opacity: 1;
                         height: $navHeight;
@@ -84,22 +102,26 @@
                         transform-origin: top;
                     }
                 }
+
                 .nav-curtain {
                     animation: appearCurtain $duration;
                     animation-iteration-count: 1;
                     animation-fill-mode: forwards;
                 }
+
                 @keyframes appearCurtain {
                     0% {
                         visibility: hidden;
                         opacity: 0;
                     }
+
                     100% {
                         visibility: visible;
                         opacity: 1;
                     }
                 }
             }
+
             .header.fade {
                 .nav {
                     display: block;
@@ -107,6 +129,7 @@
                     animation-iteration-count: 1;
                     animation-fill-mode: forwards;
                 }
+
                 @keyframes fade {
                     0% {
                         opacity: 1;
@@ -115,6 +138,7 @@
                         transform: scaleY(1);
                         transform-origin: top;
                     }
+
                     100% {
                         opacity: 0;
                         height: 0;
@@ -123,36 +147,45 @@
                         transform-origin: top;
                     }
                 }
+
                 .nav-curtain {
                     animation: fadeCurtain $duration;
                     animation-iteration-count: 1;
                     animation-fill-mode: forwards;
                 }
+
                 @keyframes fadeCurtain {
                     0% {
                         visibility: visible;
                         opacity: 1;
                     }
+
                     100% {
                         visibility: hidden;
                         opacity: 0;
                     }
                 }
             }
+
             #langs li {
                 width: auto;
             }
-        } @else {
+        }
+
+        @else {
             .nav {
                 margin-right: 1em;
             }
         }
-    } @else {
+    }
+
+    @else {
         .menu {
             display: flex;
             justify-content: space-around;
             word-break: break-all;
         }
+
         .menu-item {
             margin: 0;
         }
