将图片+脚注的样式

--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,7 +1,6 @@
-<p class="shortcodes_img">
-  <img src="{{.Get 0}}" alt="{{.Get 1}}" class="medium-zoom-image">
-  <div class="shortcodes_caption">
-    <span class="caption">◎ {{.Get 2}}</span>
-    <sup id="fnref:{{.Get 3}}"><a href="#fn:{{.Get 3}}" class="footnote-ref" role="doc-noteref">[{{.Get 3}}]</a></sup>
-  </div>
-</p>
+<figure>
+  <p class="shortcodes_img">
+    <img src="{{.Get 0}}" alt="{{.Get 1}}" class="medium-zoom-image" />
+  </p>
+  <figcaption class="caption">◎ {{.Get 2}}</figcaption>
+</figure>
