--- a/assets/scss/layout/_single.scss
+++ b/assets/scss/layout/_single.scss
@@ -73,7 +73,7 @@ hr+.post-body {
         display: block;
         margin: 2em auto;
         max-width: 100%;
-        border: 1px solid var(--color-contrast-lower);
+        border: 5px solid var(--color-contrast-lower);
         clear: both;
     }
 
@@ -138,9 +138,17 @@ blockquote {
 .caption {
     display: block;
     text-align: center;
-    margin: -1em 0 0;
+    margin: -2em 0 0;
     font-size: 90%;
     color: var(--color-contrast-medium);
+    
+    &>span{
+        position: relative;
+        &>sup{
+            position: absolute;
+            left: 100%;
+        }
+    }
 }
 
 .contents {
