--- a/layouts/partials/utils/content.html
+++ b/layouts/partials/utils/content.html
@@ -125,8 +125,8 @@
 {{- $Content := .Scratch.Get "Content" -}}
 {{- if .Site.Params.enableCaption -}}
     {{- $captionPrefix := .Site.Params.captionPrefix -}}
-    {{- $regexPatternCaption := `(<(img|video).+) title="([^"]+)"( controls)?( />|>)(</video>)?` -}}
-    {{- $regexReplacementCaption := (printf `$1$4$5$6<span class="caption">%s$3</span>` $captionPrefix) -}}
+    {{- $regexPatternCaption := `(<(img|video).+) title="([^"]+)"( controls)?( />|>)(</video>)?(<sup.+</sup>)?` -}}
+    {{- $regexReplacementCaption := (printf `$1$4$5$6<span class="caption"><span>%s$3$7</span></span>` $captionPrefix) -}}
     {{- $Content := $Content | replaceRE $regexPatternCaption $regexReplacementCaption | safeHTML -}}
     {{- .Scratch.Set "Content" $Content -}}
 {{- end -}}
