去掉header的模糊css

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -10,7 +10,7 @@
 
     .header-wrapper {
         // padding: 1em 0;
-        @include blur;
+        // @include blur;
         background: $headerBackground;
     }
 
