--- a/assets/scss/layout/_single.scss
+++ b/assets/scss/layout/_single.scss
@@ -38,14 +38,23 @@ hr+.post-body {
 .post-body {
     margin-top: 5em !important;
 
-    a {
-        text-decoration: underline;
-        text-decoration-color: var(--color-contrast-low);
+    p>a[href^="http"] {
+        padding-bottom: 2px ;
+        border-bottom: 1px dashed #000;
 
-        &:hover {
-            text-decoration-color: alpha(var(--color-primary), 0.5);
+        &:hover{
+            border-color: var(--color-primary);
         }
-    }
+      }
+
+    // a {
+    //     text-decoration: underline;
+    //     text-decoration-color: var(--color-contrast-low);
+
+    //     &:hover {
+    //         text-decoration-color: alpha(var(--color-primary), 0.5);
+    //     }
+    // }
 
     h2::after {
         @extend .goodtitle;
