--- a/assets/scss/pages/_home-footage.scss
+++ b/assets/scss/pages/_home-footage.scss
@@ -125,3 +125,70 @@
         }
     }
 }
+
+
+
+.glitch {
+    // color: white;
+      color:transparent;
+    -webkit-text-stroke: 1px rgb(63, 161, 253);
+    // font-size: 100px;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    display: inline-block;
+  }
+  @keyframes noise-anim {
+    $steps: 20;
+    @for $i from 0 through $steps {
+      #{percentage($i*(1/$steps))} {
+        $top: random(100);
+        $bottom: random(101 - $top);
+        $topWithPercent: $top * 1%;
+        $bottomWithPercent: $bottom * 1%;
+        clip-path: inset(#{$topWithPercent} 0 #{$bottomWithPercent} 0);
+      }
+    }
+  }
+  .glitch::after {
+    content: attr(data-text);
+    position: absolute;
+    left: 1px;
+    width: 100%;
+    // text-shadow: -1px 0 red;
+    top: 0;
+    // color: white;
+      color:transparent;
+    -webkit-text-stroke: 1px rgb(63, 161, 253);
+    background: black;
+    overflow: hidden;
+    animation: noise-anim 2s infinite linear alternate-reverse;
+  }
+  
+  @keyframes noise-anim-2 {
+    $steps: 20;
+    @for $i from 0 through $steps {
+      #{percentage($i*(1/$steps))} {
+        $top: random(100);
+        $bottom: random(101 - $top);
+        $topWithPercent: $top * 1%;
+        $bottomWithPercent: $bottom * 1%;
+        clip-path: inset(#{$topWithPercent} 0 #{$bottomWithPercent} 0);
+      }
+    }
+  }
+  .glitch::before {
+    content: attr(data-text);
+    position: absolute;
+    left: -1px;
+    // text-shadow: 1px 0 blue;
+    top: 0;
+    // color: white;
+      color:transparent;
+    -webkit-text-stroke: 1px rgb(63, 161, 253);
+    background: black;
+    overflow: hidden;
+    width: 100%;
+    animation: noise-anim-2 15s infinite linear alternate-reverse;
+  }
+  
